crates/ruff/tests/snapshots/lint__output_format_eof_azure.snap
---
source: crates/ruff/tests/lint.rs
info:
  program: ruff
  args:
    - check
    - "--no-cache"
    - "--output-format"
    - azure
    - "--select"
    - "F401,F821"
    - "--target-version"
    - py39
    - input.py
---
success: false
exit_code: 1
----- stdout -----
##vso[task.logissue type=error;sourcepath=[TMP]/input.py;linenumber=2;columnnumber=1;code=invalid-syntax;]missing closing quote in string literal
##vso[task.logissue type=error;sourcepath=[TMP]/input.py;linenumber=5;columnnumber=1;code=invalid-syntax;]unexpected EOF while parsing

----- stderr -----
