crates/ruff/tests/snapshots/lint__output_format_eof_github.snap
---
source: crates/ruff/tests/lint.rs
info:
  program: ruff
  args:
    - check
    - "--no-cache"
    - "--output-format"
    - github
    - "--select"
    - "F401,F821"
    - "--target-version"
    - py39
    - input.py
---
success: false
exit_code: 1
----- stdout -----
::error title=Ruff (invalid-syntax),file=[TMP]/input.py,line=2,col=1,endLine=4,endColumn=2::input.py:2:1: invalid-syntax: missing closing quote in string literal
::error title=Ruff (invalid-syntax),file=[TMP]/input.py,line=4,col=2,endLine=4,endColumn=2::input.py:4:2: invalid-syntax: unexpected EOF while parsing

----- stderr -----
