crates/ruff/tests/snapshots/lint__output_format_eof_grouped.snap
---
source: crates/ruff/tests/lint.rs
info:
  program: ruff
  args:
    - check
    - "--no-cache"
    - "--output-format"
    - grouped
    - "--select"
    - "F401,F821"
    - "--target-version"
    - py39
    - input.py
---
success: false
exit_code: 1
----- stdout -----
input.py:
  2:1 invalid-syntax: missing closing quote in string literal
  4:2 invalid-syntax: unexpected EOF while parsing

Found 2 errors.

----- stderr -----
